solved text overflow

--- a/style.css
+++ b/style.css
@@ -22,3 +22,7 @@ nav {
   top: 0px;
   z-index: 1;
 }
+
+.card-content p {
+    overflow-wrap: break-word;
+}
